--- a/index.css
+++ b/index.css
@@ -9,14 +9,12 @@ html {
   line-height: 1.5;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
-
-
-
 
 /* Flex Containers */
 
@@ -28,20 +26,19 @@ html, body {
   justify-content: center;
 }
 
-
 .title-container {
-    text-align: center;
-    margin-bottom: 0em;
-    min-height: 250px;
-    background: blue url(images/back.png) no-repeat center center;
-    background-size: cover;
-    color: white;
-    text-shadow: 1px 3px 2px #3b74dd ;
+  text-align: center;
+  margin-bottom: 0em;
+  min-height: 250px;
+  background: blue url(images/back.png) no-repeat center center;
+  background-size: cover;
+  color: white;
+  text-shadow: 1px 3px 2px #3b74dd;
 }
 
 .intro-paragraph-container {
-    text-align: left;
-    margin: 2em 3em;
+  text-align: left;
+  margin: 2em 3em;
 }
 
 .profile-picture {
@@ -49,7 +46,7 @@ html, body {
   border-radius: 50%;
   margin: auto;
   margin-top: 2em;
-  border: 4px solid #2D3142;
+  border: 4px solid #2d3142;
 }
 
 .intro-paragraph-container::after {
@@ -59,7 +56,6 @@ html, body {
   margin: 1em auto; /* Centers the line */
   border-bottom: 1px solid #ccc; /* Line color */
 }
-
 
 /* Grid Layout */
 .book-reviews {
@@ -86,11 +82,12 @@ html, body {
   max-width: 100%; /* Prevent oversized images */
   height: auto; /* Maintain aspect ratio */
   border-radius: 8px; /* Optional: rounded corners */
+  box-shadow: 10px 10px 5px rgb(87, 116, 125);
 }
 
 .review-number {
   text-align: center;
-  font-size: 2.0rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -114,9 +111,4 @@ html, body {
   .book-image img {
     width: 100%; /* Ensure images scale within the container */
   }
- 
-}
-
-@media (max-width: 500px) {
-
 }
